Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a {
 }
 
 #main {
-  width: 100vh;
+  width: 100%;
   display: flex;
   flex-flow: row;
   flex-wrap: nowrap;
